updated project section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container-fluid">
         <section class="jumbotron">
             <div class="container-fluid">
-                <span id="title_heading">HELLO, I'M</span>
+                <div id="title_heading">HELLO, I'M</div>
                 <h1>BRIAN MIN</h1>
                 <h2>Software Developer - Game Programmer - Problem Solver</h2>
                 <div class="visible-sm visible-xs"></div>
@@ -47,8 +47,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="#page_top">Home</a></li>
                 <li><a href="#page_about_me">About Me</a></li>
-                <li><a href="#page_uni_proj">University Projects</a></li>
-                <li><a href="#page_personal_proj">Personal Projects</a></li>
+                <li><a href="#page_projects">My Projects</a></li>
                 <li><a href="#page_contact">Contact</a></li>
               </ul>
             </div>
@@ -74,13 +73,14 @@
                     <div class="col-lg-4">
                         <i class="fa fa-code" style="color:#30f000;"></i>
                         <h3>Skills</h3>
-                            Java</br>
-                            C/C++</br>
-                            VB.NET</br>
-                            HTML5/CSS3/Bootstrap</br>
-                            Haskell</br>
-                            Git</br>
-                        <br/>
+                        <ul class="skills">
+                            <li><span class="label label-primary">Java/Android</span></li>
+                            <li><span class="label label-success">C/C++</span></li>
+                            <li><span class="label label-info">VB.NET</span></li>
+                            <li><span class="label label-danger">HTML5/CSS3</span></li>
+                            <li><span class="label label-default">Haskell</span></li>
+                            <li><span class="label label-warning">Git/Github</span></li>
+                        </ul>
                     </div>
                     <div class="col-lg-4">
                         <i class="fa fa-trophy" style="color:#00b3fe;"></i>
@@ -96,49 +96,14 @@
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
         </section>
 
-        <a name="page_uni_proj"></a>
+        <a name="page_projects"></a>
 
-        <section id="bg_uni_projects">
+        <section id="bg_projects">
             <header class="marginBelow">
-                <h2 id="subheadings">My University Projects</h2>
+                <h2 id="subheadings">My Projects</h2>
             </header>
 
-            <div class="col-lg-4">
-                <div class="project">
-                    <h3 class="projectName">ENGUINO COPTER</h3>
-
-                    <ul id="slider3">
-                        <li><img src="images/copter1.png" alt=""/></li>
-                        <li><img src="images/copter2.png" alt=""/></li>
-                        <li><img src="images/copter3.png" alt=""/></li>
-                    </ul>
-
-                    <div class="projectDesc">
-                        <h3 class="projectName">Engduino Copter</h3>
-                        <p>Programming coursework 2015</p>
-                        <p class="projectSkills">C / Processing-Java / Engduino-arduino</p>
-                        </br>
-                        <p>2D endless side-scrolling helicopter game where the user moves a helicopter on the screen using an engduino-arduino controller. The objective of the game is to avoid crashing into the walls or the boundaries of the screen. This game was inspired by FlappyBirds.</p></br>
-                        <a href="https://github.com/bymi15/EngduinoCopter" target="_blank"><i class="fa fa-link"> Read more</i></a>
-                    </div>
-                </div> <!--project-->
-            </div>
-
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-        </section>
-
-        <a name="page_personal_proj"></a>
-
-        <section id="bg_personal_projects">
-            <header class="marginBelow">
-                <h2 id="subheadings">My Personal Projects</h2>
-            </header>
-            <div class="col-lg-4">
-                <div class="project">
+            <div class="col-lg-4 project">
                     <h3 class="projectName">MUSIC TV</h3>
 
                     <ul id="slider1">
@@ -156,10 +121,8 @@
                         <p>Worked in a team of four and developed a system that allows users to request a song/artist of their choice or up/down vote existing songs in the queue. The tracks are automatically played in an embedded youtube video with the highest voted songs prioritised. </p></br>
                         <a href="http://devpost.com/software/music-tv-music-videos-for-the-masses-finally" target="_blank"><i class="fa fa-link"> Read more</i></a>
                     </div>
-                </div> <!--project-->
-            </div>
-            <div class="col-lg-4">
-                <div class="project">
+            </div> <!--project-->
+            <div class="col-lg-4 project">
                     <h3 class="projectName">TASK SCHEDULER</h3>
 
                     <ul id="slider2">
@@ -170,37 +133,32 @@
 
                     <div class="projectDesc">
                         <h3 class="projectName">Task Scheduler</h3>
-                        <p>Helped a friend organise his exam revision - 2014</p>
+                        <p>Personal Project - 2014</p>
                         <p class="projectSkills">Java/Swing GUI</p>
                         </br>
                         <p>Allows the user to add certain tasks to a table and set a reminder to do the task at a certain time and date. The tasks are displayed in a table and are automatically sorted by date/time.</p></br>
                         <a href="#" target="_blank"><i class="fa fa-link"> Read more</i></a>
                     </div>
-                </div> <!--project-->
-            </div>
-            <div class="col-lg-4">
-                <div class="project">
-                    <img src="images/logo.png" alt=""/>
-                    <div class="projectDesc">
-                        <h3 class="projectName">Project3</h3>
-                        <p>Location-Date</p>
-                        <p>Skills Used</p>
-                    </div>
+            </div> <!--project-->
+            <div class="col-lg-4 project">
+                <h3 class="projectName">ENGUINO COPTER</h3>
+
+                <ul id="slider3">
+                    <li><img src="images/copter1.png" alt=""/></li>
+                    <li><img src="images/copter2.png" alt=""/></li>
+                    <li><img src="images/copter3.png" alt=""/></li>
+                </ul>
+
+                <div class="projectDesc">
+                    <h3 class="projectName">Engduino Copter</h3>
+                    <p>Programming coursework 2015</p>
+                    <p class="projectSkills">C / Processing-Java / Engduino-arduino</p>
+                    </br>
+                    <p>2D endless side-scrolling helicopter game where the user moves a helicopter on the screen using an engduino-arduino controller. The objective of the game is to avoid crashing into the walls or the boundaries of the screen. This game was inspired by FlappyBirds.</p></br>
+                    <a href="https://github.com/bymi15/EngduinoCopter" target="_blank"><i class="fa fa-link"> Read more</i></a>
                 </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="project">
-                    <img src="images/logo.png" alt=""/>
-                    <div class="projectDesc">
-                        <h3 class="projectName">Project4</h3>
-                        <p>Location-Date</p>
-                        <p>Skills Used</p>
-                    </div>
-                </div>
-            </div>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
+            </div> <!--project-->
+
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
