many new updates

--- a/index.html
+++ b/index.html
@@ -67,33 +67,31 @@
                     <div class="col-lg-4">
                         <i class="fa fa-heart-o" style="color:#e60000;"></i>
                         <h3>Interests</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <p>I <em>constantly</em> find <strong>new</strong> things to do.</p>
+                        <p>This ranges from figuring out how to solve a <strong>3x3 rubiks cube</strong> to learning to play the <strong>acoustic guitar</strong>.</p><p>Software development <strong>drives me</strong> as it constantly provides me with <em>something <strong>new</strong> to create.</em></p>
                         <br/>
                     </div>
                     <div class="col-lg-4">
                         <i class="fa fa-code" style="color:#30f000;"></i>
                         <h3>Skills</h3>
-                        <ul class="skills">
-                            <li><span class="label label-primary">Java/Android</span></li>
-                            <li><span class="label label-success">C/C++</span></li>
-                            <li><span class="label label-info">VB.NET</span></li>
-                            <li><span class="label label-danger">HTML5/CSS3</span></li>
-                            <li><span class="label label-default">Haskell</span></li>
-                            <li><span class="label label-warning">Git/Github</span></li>
-                        </ul>
+                        <div class="skills">
+                            <span class="label label-primary">Java/Android</span>
+                            <span class="label label-success">C/C++</span>
+                            <span class="label label-info">VB.NET</span>
+                            <span class="label label-danger">HTML5/CSS3</span>
+                            <span class="label label-default">Haskell</span>
+                            <span class="label label-warning">Git/Github</span>
+                        </div>
                     </div>
                     <div class="col-lg-4">
                         <i class="fa fa-trophy" style="color:#00b3fe;"></i>
                         <h3>Achievements</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <p>IGCSE: 8 A*s including A* in Mathematics and Computer Studies</p>
+                        <p>IB: 40/45 including 7 in HL Computer Science and 6 in HL Mathematics</p>
                         <br/>
                     </div>
                 </div>
              </div>
-
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
         </section>
 
         <a name="page_projects"></a>
@@ -103,7 +101,8 @@
                 <h2 id="subheadings">My Projects</h2>
             </header>
 
-            <div class="col-lg-4 project">
+            <div class="row">
+                <div class="col-lg-4 project">
                     <h3 class="projectName">MUSIC TV</h3>
 
                     <ul id="slider1">
@@ -121,62 +120,75 @@
                         <p>Worked in a team of four and developed a system that allows users to request a song/artist of their choice or up/down vote existing songs in the queue. The tracks are automatically played in an embedded youtube video with the highest voted songs prioritised. </p></br>
                         <a href="http://devpost.com/software/music-tv-music-videos-for-the-masses-finally" target="_blank"><i class="fa fa-link"> Read more</i></a>
                     </div>
-            </div> <!--project-->
-            <div class="col-lg-4 project">
-                    <h3 class="projectName">TASK SCHEDULER</h3>
+                </div> <!--project-->
+                <div class="col-lg-4 project">
+                        <h3 class="projectName">TASK SCHEDULER</h3>
 
-                    <ul id="slider2">
-                        <li><img src="images/taskScheduler1.png" alt=""/></li>
-                        <li><img src="images/taskScheduler2.png" alt=""/></li>
-                        <li><img src="images/taskScheduler3.png" alt=""/></li>
+                        <ul id="slider2">
+                            <li><img src="images/taskScheduler1.png" alt=""/></li>
+                            <li><img src="images/taskScheduler2.png" alt=""/></li>
+                            <li><img src="images/taskScheduler3.png" alt=""/></li>
+                        </ul>
+
+                        <div class="projectDesc">
+                            <h3 class="projectName">Task Scheduler</h3>
+                            <p>Personal Project - 2014</p>
+                            <p class="projectSkills">Java App</p>
+                            </br>
+                            <p>Allows the user to add certain tasks to a table and set a reminder to do the task at a certain time and date. The tasks are displayed in a table and are automatically sorted by date/time.</p></br>
+                            <a href="#" target="_blank"><i class="fa fa-link"> Read more</i></a>
+                        </div>
+                </div> <!--project-->
+                <div class="col-lg-4 project">
+                    <h3 class="projectName">ENGUINO COPTER</h3>
+
+                    <ul id="slider3">
+                        <li><img src="images/copter1.png" alt=""/></li>
+                        <li><img src="images/copter2.png" alt=""/></li>
+                        <li><img src="images/copter3.png" alt=""/></li>
                     </ul>
 
                     <div class="projectDesc">
-                        <h3 class="projectName">Task Scheduler</h3>
-                        <p>Personal Project - 2014</p>
-                        <p class="projectSkills">Java/Swing GUI</p>
+                        <h3 class="projectName">Engduino Copter</h3>
+                        <p>Programming coursework 2015</p>
+                        <p class="projectSkills">C / Processing-Java / Engduino-arduino</p>
                         </br>
-                        <p>Allows the user to add certain tasks to a table and set a reminder to do the task at a certain time and date. The tasks are displayed in a table and are automatically sorted by date/time.</p></br>
+                        <p>2D endless side-scrolling helicopter game where the user moves a helicopter on the screen using an engduino-arduino controller. The objective of the game is to avoid crashing into the walls or the boundaries of the screen. This game was inspired by FlappyBirds.</p></br>
+                        <a href="https://github.com/bymi15/EngduinoCopter" target="_blank"><i class="fa fa-link"> Read more</i></a>
+                    </div>
+                </div> <!--project-->
+                <div class="col-lg-4 project">
+                    <h3 class="projectName">MMSEAFOOD POS</h3>
+
+                    <ul id="slider4">
+                        <li><img src="images/mmspos1.png" alt=""/></li>
+                        <li><img src="images/mmspos2.png" alt=""/></li>
+                        <li><img src="images/mmspos3.png" alt=""/></li>
+                    </ul>
+
+                    <div class="projectDesc">
+                        <h3 class="projectName">MMSeafood POS</h3>
+                        <p>School project 2012</p>
+                        <p class="projectSkills">VB.NET / Microsoft Access / SQL</p>
+                        </br>
+                        <p>A point-of-sale system for my client: MMSeafood - a small seafood restaurant located in Bangkok. Functionalities include: a login system, a main navigation form, a virtual table layout form where customers can be allocated to specific table numbers, a receipt generation system for each table, and menu form that allows my client to modify the meals and its prices easily.</p></br>
                         <a href="#" target="_blank"><i class="fa fa-link"> Read more</i></a>
                     </div>
-            </div> <!--project-->
-            <div class="col-lg-4 project">
-                <h3 class="projectName">ENGUINO COPTER</h3>
-
-                <ul id="slider3">
-                    <li><img src="images/copter1.png" alt=""/></li>
-                    <li><img src="images/copter2.png" alt=""/></li>
-                    <li><img src="images/copter3.png" alt=""/></li>
-                </ul>
-
-                <div class="projectDesc">
-                    <h3 class="projectName">Engduino Copter</h3>
-                    <p>Programming coursework 2015</p>
-                    <p class="projectSkills">C / Processing-Java / Engduino-arduino</p>
-                    </br>
-                    <p>2D endless side-scrolling helicopter game where the user moves a helicopter on the screen using an engduino-arduino controller. The objective of the game is to avoid crashing into the walls or the boundaries of the screen. This game was inspired by FlappyBirds.</p></br>
-                    <a href="https://github.com/bymi15/EngduinoCopter" target="_blank"><i class="fa fa-link"> Read more</i></a>
-                </div>
-            </div> <!--project-->
-
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam urna orci, scelerisque non ligula ac, gravida luctus mi. Pellentesque congue aliquet vulputate. Proin at consectetur lectus. Sed scelerisque placerat arcu nec blandit. Donec imperdiet molestie pharetra. Nunc ac tristique mauris, in molestie velit. Donec et quam dui. Nunc sed ligula ac augue mollis efficitur. Curabitur quis ultricies nibh. Pellentesque vel tellus vel augue tempor luctus eu vel metus. Aliquam egestas iaculis justo et tincidunt. Maecenas laoreet, velit in maximus sodales, odio dolor imperdiet velit, at luctus risus velit ac mi. Nullam non ex eleifend, dapibus eros varius, vulputate neque. Sed eget nunc sit amet magna tempus finibus. </p>
+                </div> <!--project-->
+            </div>
         </section>
 
         <a name="page_contact"></a>
 
         <section id="bg_contact">
-            <div>
+            <div class="row">
                 <h2 id="subheadings">Contact</h2>
                 <h3>Any enquiries? Connect with me</h3>
-                <p><a href="https://www.facebook.com/brian.min.965" target="_blank">Facebook <i class="fa fa-facebook-square"></i></a></p>
-                <p><a href="https://www.instagram.com/bymi15/" target="_blank">Instagram <i class="fa fa-instagram"></i></a></p>
-                <p><a href="https://www.linkedin.com/in/bymi15" target="_blank">LinkedIn <i class="fa fa-linkedin-square"></i></a></p>
-                <p><a href="https://github.com/bymi15" target="_blank">Github <i class="fa fa-github-square"></i></a></p>
-                <p><a href="mailto:bymi15@yahoo.com?Subject=Brian%20Min%20Website%20-%20Enquiry">Email <i class="fa fa-envelope"></i></a></p>
+                <a href="https://www.facebook.com/brian.min.965" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com/bymi15/" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/bymi15" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                <a href="https://github.com/bymi15" target="_blank"><i class="fa fa-github-square"></i></a>
+                <a href="mailto:bymi15@yahoo.com?Subject=Brian%20Min%20Website%20-%20Enquiry"><i class="fa fa-envelope"></i></a>
             </div>
         </section>
 
