--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="container-fluid">
                 <div id="title_heading">HELLO, I'M</div>
                 <h1>BRIAN MIN</h1>
-                <h2>Software Developer - Game Programmer - Problem Solver</h2>
+                <h2>First year Computer Science student at UCL</h2>
                 <div class="visible-sm visible-xs"></div>
             </div>
         </section>
@@ -60,6 +60,12 @@
                 <h2 id="subheadings">About Me</h2>
                 <hr>
                 <h3>I am a first year MEng Computer Science student studying at University College London <i class="fa fa-university"></i></h3>
+                <ul>
+                    <li><h3>I constantly find <strong>new</strong> things to do.</h3></li>
+                    <li><h3>This ranges from figuring out how to solve a <strong>3x3 rubiks cube</strong> to learning to play the <strong>acoustic guitar</strong>.</h3></li>
+                    <li><h3>Software development <strong>drives me</strong> as it constantly provides me with <em>something <strong>new</strong> to create.</em></h3></li>
+                </ul>
+
             </header>
 
             <div id="about_me">
@@ -67,9 +73,11 @@
                     <div class="col-lg-4">
                         <i class="fa fa-heart-o" style="color:#e60000;"></i>
                         <h3>Interests</h3>
-                        <p>I <em>constantly</em> find <strong>new</strong> things to do.</p>
-                        <p>This ranges from figuring out how to solve a <strong>3x3 rubiks cube</strong> to learning to play the <strong>acoustic guitar</strong>.</p><p>Software development <strong>drives me</strong> as it constantly provides me with <em>something <strong>new</strong> to create.</em></p>
-                        <br/>
+                        <div class="interests">
+                            <span class="label label-danger">Software Development</span></br>
+                             <span class="label label-success">Game Programming</span></br>
+                            <span class="label label-primary">Problem Solving</span><br/>
+                        </div>
                     </div>
                     <div class="col-lg-4">
                         <i class="fa fa-code" style="color:#30f000;"></i>
@@ -86,8 +94,8 @@
                     <div class="col-lg-4">
                         <i class="fa fa-trophy" style="color:#00b3fe;"></i>
                         <h3>Achievements</h3>
-                        <p>IGCSE: 8 A*s including A* in Mathematics and Computer Studies</p>
-                        <p>IB: 40/45 including 7 in HL Computer Science and 6 in HL Mathematics</p>
+                        <p><strong>IGCSE: 8 A*s</strong> with A* in Mathematics and Computer Studies</p>
+                        <p><strong>IB: 40/45</strong> with 7 in HL Computer Science, 7 in HL Physics and 6 in HL Mathematics</p>
                         <br/>
                     </div>
                 </div>
@@ -114,7 +122,7 @@
 
                     <div class="projectDesc">
                         <h3 class="projectName">Music TV</h3>
-                        <p>HackKings 2015</p>
+                        <p>HackKings 2015 - 24 hr hackathon</p>
                         <p class="projectSkills">Android/Java/PHP/MySQL/HTML5/CSS3/Bootstrap</p>
                         </br>
                         <p>Worked in a team of four and developed a system that allows users to request a song/artist of their choice or up/down vote existing songs in the queue. The tracks are automatically played in an embedded youtube video with the highest voted songs prioritised. </p></br>
@@ -150,7 +158,7 @@
 
                     <div class="projectDesc">
                         <h3 class="projectName">Engduino Copter</h3>
-                        <p>Programming coursework 2015</p>
+                        <p>Programming coursework - 2015</p>
                         <p class="projectSkills">C / Processing-Java / Engduino-arduino</p>
                         </br>
                         <p>2D endless side-scrolling helicopter game where the user moves a helicopter on the screen using an engduino-arduino controller. The objective of the game is to avoid crashing into the walls or the boundaries of the screen. This game was inspired by FlappyBirds.</p></br>
@@ -168,10 +176,31 @@
 
                     <div class="projectDesc">
                         <h3 class="projectName">MMSeafood POS</h3>
-                        <p>School project 2012</p>
+                        <p>School project - 2012</p>
                         <p class="projectSkills">VB.NET / Microsoft Access / SQL</p>
                         </br>
                         <p>A point-of-sale system for my client: MMSeafood - a small seafood restaurant located in Bangkok. Functionalities include: a login system, a main navigation form, a virtual table layout form where customers can be allocated to specific table numbers, a receipt generation system for each table, and menu form that allows my client to modify the meals and its prices easily.</p></br>
+                        <a href="#" target="_blank"><i class="fa fa-link"> Read more</i></a>
+                    </div>
+                </div> <!--project-->
+                <div class="col-lg-4 project">
+                    <h3 class="projectName">MINSTA-CHAT</h3>
+
+                    <ul id="slider5">
+                        <li><img src="images/minstachat1.png" alt=""/></li>
+                        <li><img src="images/minstachat2.png" alt=""/></li>
+                        <li><img src="images/minstachat3.png" alt=""/></li>
+                        <li><img src="images/minstachat4.png" alt=""/></li>
+                        <li><img src="images/minstachat5.png" alt=""/></li>
+                        <li><img src="images/minstachat6.png" alt=""/></li>
+                    </ul>
+
+                    <div class="projectDesc">
+                        <h3 class="projectName">Minsta-Chat</h3>
+                        <p>Personal project - 2015</p>
+                        <p class="projectSkills">Java / Android</p>
+                        </br>
+                        <p>A multi-threaded TCP Chat Server and Client built using Java Sockets and Threads. Chat client available as both an Android app and a Java app.</p></br>
                         <a href="#" target="_blank"><i class="fa fa-link"> Read more</i></a>
                     </div>
                 </div> <!--project-->
@@ -184,11 +213,11 @@
             <div class="row">
                 <h2 id="subheadings">Contact</h2>
                 <h3>Any enquiries? Connect with me</h3>
-                <a href="https://www.facebook.com/brian.min.965" target="_blank"><i class="fa fa-facebook-square"></i></a>
-                <a href="https://www.instagram.com/bymi15/" target="_blank"><i class="fa fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/bymi15" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-                <a href="https://github.com/bymi15" target="_blank"><i class="fa fa-github-square"></i></a>
-                <a href="mailto:bymi15@yahoo.com?Subject=Brian%20Min%20Website%20-%20Enquiry"><i class="fa fa-envelope"></i></a>
+                <a href="https://www.facebook.com/brian.min.965" target="_blank"><i class="fa fa-facebook-square" style="color:#00b3fe;"></i></a>
+                <a href="https://www.instagram.com/bymi15/" target="_blank"><i class="fa fa-instagram" style="color:#cc4400;"></i></a>
+                <a href="https://www.linkedin.com/in/bymi15" target="_blank"><i class="fa fa-linkedin-square" style="color:#3333ff;"></i></a>
+                <a href="https://github.com/bymi15" target="_blank"><i class="fa fa-github-square" style="color:#6600cc;"></i></a>
+                <a href="mailto:bymi15@yahoo.com?Subject=Brian%20Min%20Website%20-%20Enquiry"><i class="fa fa-envelope" style="color:#cc8810"></i></a>
             </div>
         </section>
 
@@ -208,7 +237,7 @@
     <!-- Smooth scroll Javascript file -->
     <script type="text/javascript" src="js/smoothscroll.js"></script>
 
-    <!-- Google Analytics -->
+    <!-- Google Analytics
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -217,7 +246,7 @@
 
       ga('create', 'UA-71639378-1', 'auto');
       ga('send', 'pageview');
-    </script>
+    </script>-->
 
 </body>
 </html>
