--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <p class="projectSkills">Java App</p>
                             </br>
                             <p>Allows the user to add certain tasks to a table and set a reminder to do the task at a certain time and date. The tasks are displayed in a table and are automatically sorted by date/time.</p></br>
-                            <a href="#" target="_blank"><i class="fa fa-link"> Read more</i></a>
+                            <a href="https://github.com/bymi15/TaskScheduler" target="_blank"><i class="fa fa-github"> Github</i></a>
                         </div>
                 </div> <!--project-->
                 <div class="col-lg-4 project">
@@ -162,7 +162,7 @@
                         <p class="projectSkills">C / Processing-Java / Engduino-arduino</p>
                         </br>
                         <p>2D endless side-scrolling helicopter game where the user moves a helicopter on the screen using an engduino-arduino controller. The objective of the game is to avoid crashing into the walls or the boundaries of the screen. This game was inspired by FlappyBirds.</p></br>
-                        <a href="https://github.com/bymi15/EngduinoCopter" target="_blank"><i class="fa fa-link"> Read more</i></a>
+                        <a href="https://github.com/bymi15/EngduinoCopter" target="_blank"><i class="fa fa-github"> Github</i></a>
                     </div>
                 </div> <!--project-->
                 <div class="col-lg-4 project">
@@ -180,7 +180,6 @@
                         <p class="projectSkills">VB.NET / Microsoft Access / SQL</p>
                         </br>
                         <p>A point-of-sale system for my client: MMSeafood - a small seafood restaurant located in Bangkok. Functionalities include: a login system, a main navigation form, a virtual table layout form where customers can be allocated to specific table numbers, a receipt generation system for each table, and menu form that allows my client to modify the meals and its prices easily.</p></br>
-                        <a href="#" target="_blank"><i class="fa fa-link"> Read more</i></a>
                     </div>
                 </div> <!--project-->
                 <div class="col-lg-4 project">
@@ -198,10 +197,10 @@
                     <div class="projectDesc">
                         <h3 class="projectName">Minsta-Chat</h3>
                         <p>Personal project - 2015</p>
-                        <p class="projectSkills">Java / Android</p>
+                        <p class="projectSkills">Java / Android App</p>
                         </br>
-                        <p>A multi-threaded TCP Chat Server and Client built using Java Sockets and Threads. Chat client available as both an Android app and a Java app.</p></br>
-                        <a href="#" target="_blank"><i class="fa fa-link"> Read more</i></a>
+                        <p>A multi-threaded TCP Chat Server and Client built using Java Sockets and Threads. Chat client available as both an Android app and Java app.</p></br>
+                        <a href="https://github.com/bymi15/MinstaChat" target="_blank"><i class="fa fa-github"> Github</i></a>
                     </div>
                 </div> <!--project-->
             </div>
@@ -213,11 +212,13 @@
             <div class="row">
                 <h2 id="subheadings">Contact</h2>
                 <h3>Any enquiries? Connect with me</h3>
-                <a href="https://www.facebook.com/brian.min.965" target="_blank"><i class="fa fa-facebook-square" style="color:#00b3fe;"></i></a>
-                <a href="https://www.instagram.com/bymi15/" target="_blank"><i class="fa fa-instagram" style="color:#cc4400;"></i></a>
-                <a href="https://www.linkedin.com/in/bymi15" target="_blank"><i class="fa fa-linkedin-square" style="color:#3333ff;"></i></a>
-                <a href="https://github.com/bymi15" target="_blank"><i class="fa fa-github-square" style="color:#6600cc;"></i></a>
-                <a href="mailto:bymi15@yahoo.com?Subject=Brian%20Min%20Website%20-%20Enquiry"><i class="fa fa-envelope" style="color:#cc8810"></i></a>
+                <div style="text-align:center;">
+                    <a href="https://www.facebook.com/brian.min.965" target="_blank"><i class="fa fa-facebook-square" style="color:#00b3fe;"></i></a>
+                    <a href="https://www.instagram.com/bymi15/" target="_blank"><i class="fa fa-instagram" style="color:#cc4400;"></i></a>
+                    <a href="https://www.linkedin.com/in/bymi15" target="_blank"><i class="fa fa-linkedin-square" style="color:#3333ff;"></i></a>
+                    <a href="https://github.com/bymi15" target="_blank"><i class="fa fa-github-square" style="color:#6600cc;"></i></a>
+                    <a href="mailto:bymi15@yahoo.com?Subject=Brian%20Min%20Website%20-%20Enquiry"><i class="fa fa-envelope" style="color:#cc8810"></i></a>
+                </div>
             </div>
         </section>
 
